# myagent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  main.py  mcp-config.json  pyproject.toml  sre_agent_langgraph_arch.md  sre_rollback_analysis.md  sre_rollback_best_practices_2026.md
.github/workflows/: ci.yml
app/: agent.py  config.py  knowledge.py  main.py
app/api/: routes_servers.py
app/core/: downstream_mcp_client.py  errors.py  models.py  registry.py  session_store.py  tool_catalog.py
app/mcp/: fastmcp_hub.py
app/web/static/: app.js
app/web/templates/: index.html
demo/: weather_server.py
docs/: PROMPTS.md  SRE_AGENT_ROADMAP.md  STRUCTURE.md  TASK_01_STATE_REFACTOR.md  architecture.md
docs/adr/: 0001-use-langgraph-for-rag-workflow.md
docs/plans/: 2026-02-11-mcp-hub-demo.md  multi_agent_migration.md
docs/tasks/: 02_state_machine.md
examples/: db_usage.py  mcpservers_client.py  run_loop.py  sdk_client.py
mcp-demo/: .gitignore  README.md  pyproject.toml
mcp-demo/client/: README.md  client.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
mcp-demo/client/src/: client.ts  examples.ts  index.ts
mcp-demo/server/: README.md  package.json  pyproject.toml  server.py
mcp-demo/server/src/: index.ts
mcp-hub/: .gitignore  PROMPT.md  README.md  pyproject.toml
mcp-hub/client/: main.py
mcp-hub/examples/: README.md
mcp-hub/examples/advanced-client/: README.md  client.py  pyproject.toml
mcp-hub/examples/calc-server/: README.md  pyproject.toml  server.py
mcp-hub/examples/file-server/: README.md  pyproject.toml  server.py
mcp-hub/examples/hub-client/: README.md  client.py  pyproject.toml
mcp-hub/examples/time-server/: README.md  pyproject.toml  server.py
mcp-hub/examples/weather-server/: README.md  pyproject.toml  server.py
mcp-hub/hub/: main.py
mcp-hub/mcp_hub/: __init__.py  main.py
mcp-hub/mcp_hub/api/: __init__.py  routes.py
mcp-hub/mcp_hub/models/: database.py
mcp-hub/mcp_hub/sdk/: __init__.py  client.py  server.py
mcp-hub/mcp_hub/services/: proxy.py  registry.py
mcp-hub/server/: main.py
mcp-hub/tests/: test_hub.py  test_server_tools.py
src/: __init__.py
src/agent_builder/: __init__.py  main_graph.py
src/agent_builder/core/: __init__.py  state.py
src/agent_builder/subgraphs/: __init__.py  loop_example.py  nested_example.py
src/agents/: graph.py  nodes.py  state.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: chat.py  health.py
src/app/agents/: __init__.py  graph.py  state.py  warroom_nodes.py
src/app/core/: config.py  database.py  exceptions.py  http_client.py  prompts.py
src/core/: __init__.py  config.py  logging.py
src/services/: __init__.py  huawei_auth.py  knowledge.py  llm.py
src/sre/agents/: __init__.py
src/sre/agents/diagnoser/: graph.py  nodes.py
src/sre/agents/executor/: graph.py  nodes.py
src/sre/agents/monitor/: nodes.py
src/sre/agents/shared/: state.py  state_utils.py
src/sre/agents/supervisor/: graph.py  nodes.py
src/sre/core/: state_machine.py
tests/: conftest.py  test_agent.py  test_api.py  test_graph_integration.py  test_huawei_auth.py
tests/agents/: test_warroom_nodes.py
tests/api/: test_mcp_endpoint.py  test_servers_api.py
tests/integration/: test_end_to_end_demo.py  test_weather_demo_server.py
tests/sre/integration/: test_sre_workflow.py
tests/sre/unit/agents/: test_state.py
tests/sre/unit/agents/diagnoser/: test_diagnoser.py
tests/sre/unit/agents/executor/: test_executor.py
tests/sre/unit/core/: test_state_machine.py
tests/unit/: test_downstream_mcp_client.py  test_registry.py  test_tool_catalog.py
