[project]
name = "mcp-hub"
version = "0.1.0"
description = "MCP Registry Hub - 服务注册中心"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=1.6.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-hub = "mcp_hub.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
