[project]
name = "mcp-demo-client"
version = "1.0.0"
description = "MCP Demo Client - 连接 MCP Server 的示例客户端"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
mcp-client = "client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
