[project]
name = "mcp-demo-server"
version = "1.0.0"
description = "MCP Demo Server with stdio and SSE transports"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
