[project]
name = "mcp-advanced-client"
version = "1.0.0"
description = "高级 MCP Client 示例 - 服务缓存、负载均衡、并行调用"
requires-python = ">=3.10"
dependencies = [
    "mcp-hub",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mcp-hub = { path = "../.." }
