[project]
name = "mcp-server-weather"
version = "1.0.0"
description = "示例 MCP Weather Server - 注册到 MCP Hub"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
